--- a/style.css
+++ b/style.css
@@ -11,3 +11,17 @@
     font-size: 75px;
     color: white;
 }
+
+html, body {
+    height: 100%;
+  }
+  
+  .wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  footer {
+    margin-top: auto;
+  }
