--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+.navbar-logo {
+  max-width: 50px;
+  max-height: 50px;
+  height: auto;
+}
+
+@media (max-width: 700px) {
+  .navbar-logo {
+    max-width: 150px; 
+  }
+}
+
+
+
 #container{
     margin: 2 white;
     padding-bottom: 50px blue;
