--- a/style.css
+++ b/style.css
@@ -33,8 +33,15 @@
   background-color: rgb(211, 211, 211);
 }
 
-html, body {
+  html, body {
     height: 100%;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   
   .wrapper {
@@ -51,17 +58,16 @@ html, body {
     padding-top: 0%;
     padding-left:0%;
   }
-  
-  .col {
-    border-color: red ;
-    padding: 1%;
-    border-style: solid;
-    border-width: medium;
-  }
-  .col-lg{
-      height: 200px;
-      overflow: hidden;
-      margin: 10px 0;
-      position: relative;
-      flex-basis: 30%;
-  }
+
+  #catImages {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+ .catImage {
+    max-width: 100%;
+    max-height: 400px;
+    margin: 10px;
+}
+
